# camc

./: .gitignore  Design_overview.md  PROTOTYPES_FEATURES.md  README.md  build-ios-local.sh  events-sample.json  index.html  package-lock.json  package.json  vite.config.ts
.github/: README.md
.github/scripts/: create-wrapper-script.sh  tauri-dummy-server.py
.github/workflows/: README_UPLOAD.md  build-android.yml  build-desktop.yml  build-ios.yml  ci.yml  release.yml  test.yml  upload-testflight.yml
docs/architecture/: design-overview.md
docs/features/: calendar.md  file-export.md
docs/getting-started/: index.md
docs/mobile/: android-setup.md  android-troubleshooting.md  ios-setup.md  ios-troubleshooting.md
fastlane/: Appfile  Fastfile  README.md  report.xml
scripts/: build-rust-ios.sh
scripts/android/: debug.sh  emulator.sh  rebuild.sh  setup.sh
scripts/dev/: kill-servers.sh
scripts/ios/: build-local.sh  fix-xcode-project.sh
src/: App.vue  main.ts  quasar-user-options.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  exports.rs  lib.rs  main.rs  pdf_exports.rs  print_exports.rs
src/components/: DynamicForm.vue  MonthView.vue  NavigationDrawer.vue  ToolbarActions.vue
src/composables/: useFileExport.ts  useModelData.ts  usePrintSettings.ts
src/models/: assemblyOrganizationObject.js  branchOfficeObject.js  checklistItemObject.js  checklistObject.js  circuitEventObject.js  circuitEventPartObject.js  circuitObject.js  circuitOverseerObject.js  congregationObject.js  conventionObject.js  conventionPartObject.js  editorTemplateObject.js  emailObject.js  expenseReportObject.js  letterObject.js  personObject.js  pqrObject.js  pssClassWorkshopObject.js  pssObject.js  recommendationObject.js  reminderObject.js  routingObject.js  sceClassAssignmentObject.js  sceObject.js  supportedBranchFormsObject.js  userObject.js  venueObject.js  visitObject.js
src/pages/: CalendarPage.vue  CongregationsPage.vue  ModelCrudPage.vue  PrintPreviewPage.css  PrintPreviewPage.vue  PrototypesPage.vue  ReportsPage.vue  SettingsPage.vue
src/router/: index.ts
src/utils/: errors.ts  events.ts
