[package]
name = "circuit-assistant-mobile-companion"
version = "0.1.0"
description = "Circuit Assistant Mobile Companion - Local-first cross-platform application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# For desktop development, we'll use main.rs as the entry point
# For mobile builds, Tauri will handle the library compilation

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
chrono = "0.4"
base64 = "0.21"
printpdf = "0.7"
lopdf = "0.32"
oxidize-pdf = "1.6"
regex = "1.10"

[lib]
name = "circuit_assistant_mobile_companion"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
